# 2d-game-cpp

./: .gitignore
include/animations/: Animation.hpp
include/characters/: Character.hpp  PlayerCharacter.hpp
include/core/: Engine.hpp  Time.hpp
include/graphics/: TextureManager.hpp
include/input/: InputHandler.hpp
include/map/: GameMap.hpp  TileLayer.hpp
include/object/: GameObject.hpp  IObject.hpp
include/physics/: Rigidbody2D.hpp  Transform.hpp  Vector2.hpp
src/: Animation.cpp  CMakeLists.txt  Engine.cpp  GameMap.cpp  InputHandler.cpp  PlayerCharacter.cpp  TextureManager.cpp  TileLayer.cpp  Time.cpp  Vector2.cpp  main.cpp
src/animations/: Animation.cpp
src/characters/: PlayerCharacter.cpp
src/core/: Engine.cpp  Time.cpp
src/graphics/: TextureManager.cpp
src/include/animations/: Animation.hpp
src/include/characters/: Character.hpp  PlayerCharacter.hpp
src/include/core/: Engine.hpp  Time.hpp
src/include/graphics/: TextureManager.hpp
src/include/input/: InputHandler.hpp
src/include/map/: GameMap.hpp  Layer.hpp  TileLayer.hpp
src/include/object/: GameObject.hpp  IObject.hpp
src/include/physics/: Rigidbody2D.hpp  Transform.hpp  Vector2.hpp
src/input/: InputHandler.cpp
src/map/: GameMap.cpp  TileLayer.cpp
src/physics/: Vector2.cpp
